--- a/rollup/main/default/classes/RollupFullBatchRecalculator.cls
+++ b/rollup/main/default/classes/RollupFullBatchRecalculator.cls
@@ -2,15 +2,19 @@ public class RollupFullBatchRecalculator extends Rollup {
   private final String queryString;
   private final Rollup__mdt rollupInfo;
   private final SObjectType calcItemType;
+  private final Set<Id> recordIds;
 
-  public RollupFullBatchRecalculator(String queryString, RollupInvocationPoint invokePoint, Rollup__mdt rollupInfo, SObjectType calcItemType) {
+  public RollupFullBatchRecalculator(String queryString, RollupInvocationPoint invokePoint, Rollup__mdt rollupInfo, SObjectType calcItemType, Set<Id> recordIds) {
     super(invokePoint);
     this.queryString = queryString;
     this.rollupInfo = rollupInfo;
+    this.recordIds = recordIds;
   }
 
   public override Database.QueryLocator start(Database.BatchableContext bc) {
     Set<Id> objIds = new Set<Id>(); // necessary; there's a bind variable in the query string
+    // note - if the optional where clause was appended to the passed in query string, this.recordIds is also
+    // used as a bind variable
     return Database.getQueryLocator(this.queryString);
   }
 
